--- a/ng_frontend/templates/invoice.html
+++ b/ng_frontend/templates/invoice.html
@@ -1,1 +1,79 @@
-<h1> Invioce</h1>
+<div ng-controller="InvoiceController">
+
+    <div class="widget">
+      <div class="widget-header bordered-bottom bordered-pink">
+          <span class="widget-caption">Invoice</span>
+      </div>
+      <div class="widget-body">
+
+	<p>Date: {{date | date:'dd-MM-yy'}}</p>
+	<!-- <div class="horizontal-space"></div>-->
+        <form class="form-horizontal" name="invoiceform">
+		<input placeholder="Customer Name" class="form-control" ng-model="invoice.custname" required="">
+                <div class="horizontal-space"></div>
+        	<input placeholder="Product" class="form-control" ng-model="invoice.product" required="">
+		<div class="horizontal-space"></div>
+            <div class="horizontal-space"></div>
+        <table class="table table-hover table-bordered table-sm">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Name</th>
+              <th scope="col">Description</th>
+              <th scope="col">Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="p in Filtered = (products | filter:invoice.product)">
+		    <th scope="row">{{ $index + 1}}</th>
+              <td>{{ p.name }}</td>
+              <td>{{ p.description }}</td>
+              <td>{{ p.price }}</td>
+            </tr>
+          </tbody>
+        </table>
+	<div class="horizontal-space"></div>
+	<div class="input-group mb-3">
+  		<input type="text" class="form-control" placeholder="Quantity" aria-label="Qty" ng-model="invoice.qty">
+  		<div class="input-group-append">
+    			<button class="btn btn-outline-secondary" type="button" ng-click="addProduct()">Add Product</button>
+  		</div>
+	</div>
+	</hr>
+	<div class="horizontal-space"></div>
+<table class="table table-hover table-bordered table-sm" ng-show="selectedProducts.length">
+	<tr>
+		<th>sl</th>
+		<th>#</th>
+		<th>name</th>
+		<th>price</th>
+		<th>qty</th>
+		<th>total</th>
+	</tr>
+	<tr ng-repeat="p in selectedProducts">
+		<td>{{ $index + 1}}</td>
+		<td>{{ p.id }}</td>
+		<td>{{ p.name }}</td>
+		<td>{{ p.price }}</td>
+		<td>{{ p.qty }}</td>
+		<td>{{ p.total}}</td>
+	</tr>
+</table>
+
+<div class="horizontal-space"></div>
+<div class="input-group">
+  <div class="input-group-prepend">
+	  <span class="input-group-text">Net: {{ invoice.net }}</span>
+  </div>
+  <input type="text" class="form-control" aria-label="Paid" ng-model="paid">
+  <div class="input-group-append">
+	  <span class="input-group-text">Balance:{{ paid - invoice.net }}</span>
+  </div>
+</div>
+<div class="horizontal-space"></div>
+<button ng-click="createInvoice()" class="btn btn-default">Add Invoice</button>
+	</form>
+      </div>
+    </div>
+</div>
+
