renamed angularjs files to docs folder to serve in github

--- a/docs/templates/addinvoice.html
+++ b/docs/templates/addinvoice.html
@@ -1,4 +1,4 @@
-<div ng-controller="InvoiceController">
+<div ng-controller="addInvoiceController">
 
     <div class="widget">
       <div class="widget-header bordered-bottom bordered-pink">
